--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,19 +8,22 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body class="font-arabic">
     <!-- رأس الصفحة -->
     <header class="bg-white shadow-md">
         <nav class="container mx-auto px-6 py-3 flex justify-between items-center">
             <div class="flex items-center">
-                <img src="/path/to/logo.png" alt="شعار مصنع الابداع للرخام" class="h-12 w-auto">
+                <img src="images/logo.png" alt="شعار مصنع الابداع للرخام" class="h-12 w-auto">
             </div>
             <div class="hidden md:flex items-center space-x-4">
-                <a href="index.html" class="text-gray-800 hover:text-gray-600">الرئيسية</a>
+                <a href="/index.html" class="text-gray-800 hover:text-gray-600 ml-2">الرئيسية</a>
                 <a href="#" class="text-gray-800 hover:text-gray-600 font-bold">من نحن</a>
-                <a href="#" class="text-gray-800 hover:text-gray-600">خدماتنا</a>
-                <a href="#" class="text-gray-800 hover:text-gray-600">مشاريعنا</a>
-                <a href="#" class="text-gray-800 hover:text-gray-600">اتصل بنا</a>
+                <a href="/services.html" class="text-gray-800 hover:text-gray-600">خدماتنا</a>
+                <a href="/projects.html" class="text-gray-800 hover:text-gray-600">مشاريعنا</a>
+                <a href="/contact.html" class="text-gray-800 hover:text-gray-600">اتصل بنا</a>
+                <a href="/privacy-policy.html" class="text-gray-800 hover:text-gray-600">سياسة الخصوصية</a>
+                <a href="/updated-offers-page.html" class="text-gray-800 hover:text-gray-600">عروض اليوم الوطني</a>
             </div>
         </nav>
     </header>
@@ -30,10 +34,13 @@
             <h1 class="text-4xl font-bold mb-8 text-center">من نحن</h1>
             <div class="bg-white p-8 rounded-lg shadow-md">
                 <p class="text-lg mb-6">
-                    تأسس مصنع الابداع للرخام منذ ثلاثين عامًا، ونفخر بكوننا من الشركات الرائدة في مجال الرخام والجرانيت في المملكة العربية السعودية. نحن نتميز بخبرتنا الواسعة وكفاءتنا العالية في تقديم منتجات وخدمات عالية الجودة.
+                    تأسس مصنع الابداع للرخام منذ ثلاثين عامًا، ونفخر بكوننا من الشركات الرائدة في مجال الرخام والجرانيت
+                    في المملكة العربية السعودية. نحن نتميز بخبرتنا الواسعة وكفاءتنا العالية في تقديم منتجات وخدمات عالية
+                    الجودة.
                 </p>
                 <p class="text-lg mb-6">
-                    نحن ملتزمون بتوفير أفضل أنواع الرخام والجرانيت لعملائنا، ونسعى دائمًا لتجاوز توقعاتهم من خلال الجودة والابتكار في كل ما نقدمه.
+                    نحن ملتزمون بتوفير أفضل أنواع الرخام والجرانيت لعملائنا، ونسعى دائمًا لتجاوز توقعاتهم من خلال الجودة
+                    والابتكار في كل ما نقدمه.
                 </p>
             </div>
         </div>
@@ -46,13 +53,16 @@
                 <div class="bg-white p-8 rounded-lg shadow-md">
                     <h2 class="text-2xl font-semibold mb-4">رؤيتنا</h2>
                     <p class="text-lg">
-                        تحقيق الريادة المحلية والوطنية من خلال استراتيجية تنفيذ المشاريع وفق أعلى معايير الجودة حتى نصبح الخيار الأول والأمثل في مجال تصنيع الرخام والأحجار الطبيعية.
+                        تحقيق الريادة المحلية والوطنية من خلال استراتيجية تنفيذ المشاريع وفق أعلى معايير الجودة حتى نصبح
+                        الخيار الأول والأمثل في مجال تصنيع الرخام والأحجار الطبيعية.
                     </p>
                 </div>
                 <div class="bg-white p-8 rounded-lg shadow-md">
                     <h2 class="text-2xl font-semibold mb-4">مهمتنا</h2>
                     <p class="text-lg">
-                        تزويد عملائنا بأعلى جودة من منتجات الرخام والجرانيت، باستخدام أحدث التقنيات وتنفيذ أكثر العمليات كفاءة لضمان تسليم منتجاتنا وتركيبها في الوقت المناسب، جاهدين لتجاوز توقعات العملاء لنصبح شريكًا موثوقًا في مشاريعهم.
+                        تزويد عملائنا بأعلى جودة من منتجات الرخام والجرانيت، باستخدام أحدث التقنيات وتنفيذ أكثر العمليات
+                        كفاءة لضمان تسليم منتجاتنا وتركيبها في الوقت المناسب، جاهدين لتجاوز توقعات العملاء لنصبح شريكًا
+                        موثوقًا في مشاريعهم.
                     </p>
                 </div>
             </div>
@@ -87,4 +97,5 @@
         </div>
     </footer>
 </body>
+
 </html>
