--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,20 +8,22 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body class="font-arabic">
     <!-- رأس الصفحة -->
     <header class="bg-white shadow-md">
         <nav class="container mx-auto px-6 py-3 flex justify-between items-center">
             <div class="flex items-center">
-                <img src="/path/to/logo.png" alt="شعار مصنع الابداع للرخام" class="h-12 w-auto">
+                <img src="images/logo.png" alt="شعار مصنع الابداع للرخام" class="h-12 w-auto">
             </div>
             <div class="hidden md:flex items-center space-x-4">
-                <a href="index.html" class="text-gray-800 hover:text-gray-600">الرئيسية</a>
-                <a href="about.html" class="text-gray-800 hover:text-gray-600">من نحن</a>
-                <a href="services.html" class="text-gray-800 hover:text-gray-600">خدماتنا</a>
-                <a href="projects.html" class="text-gray-800 hover:text-gray-600">مشاريعنا</a>
-                <a href="contact.html" class="text-gray-800 hover:text-gray-600">اتصل بنا</a>
+                <a href="/index.html" class="text-gray-800 hover:text-gray-600 ml-2">الرئيسية</a>
+                <a href="/about.html" class="text-gray-800 hover:text-gray-600">من نحن</a>
+                <a href="/services.html" class="text-gray-800 hover:text-gray-600">خدماتنا</a>
+                <a href="/projects.html" class="text-gray-800 hover:text-gray-600">مشاريعنا</a>
+                <a href="/contact.html" class="text-gray-800 hover:text-gray-600">اتصل بنا</a>
                 <a href="#" class="text-gray-800 hover:text-gray-600 font-bold">سياسة الخصوصية</a>
+                <a href="/updated-offers-page.html" class="text-gray-800 hover:text-gray-600">عروض اليوم الوطني</a>
             </div>
         </nav>
     </header>
@@ -29,27 +32,34 @@
     <section class="py-16 bg-gray-100">
         <div class="container mx-auto px-6">
             <h1 class="text-4xl font-bold mb-8 text-center">سياسة الخصوصية</h1>
-            
+
             <div class="bg-white p-8 rounded-lg shadow-md">
                 <h2 class="text-2xl font-semibold mb-4">1. جمع المعلومات</h2>
-                <p class="mb-6">نحن نجمع المعلومات التي تقدمها لنا عند استخدام موقعنا، بما في ذلك الاسم وعنوان البريد الإلكتروني ورقم الهاتف عند ملء نموذج الاتصال.</p>
+                <p class="mb-6">نحن نجمع المعلومات التي تقدمها لنا عند استخدام موقعنا، بما في ذلك الاسم وعنوان البريد
+                    الإلكتروني ورقم الهاتف عند ملء نموذج الاتصال.</p>
 
                 <h2 class="text-2xl font-semibold mb-4">2. استخدام المعلومات</h2>
-                <p class="mb-6">نستخدم المعلومات التي نجمعها للرد على استفساراتكم وتقديم خدماتنا بشكل أفضل. لن نشارك معلوماتكم الشخصية مع أي طرف ثالث دون موافقتكم.</p>
+                <p class="mb-6">نستخدم المعلومات التي نجمعها للرد على استفساراتكم وتقديم خدماتنا بشكل أفضل. لن نشارك
+                    معلوماتكم الشخصية مع أي طرف ثالث دون موافقتكم.</p>
 
                 <h2 class="text-2xl font-semibold mb-4">3. أمان المعلومات</h2>
-                <p class="mb-6">نتخذ إجراءات أمنية مناسبة لحماية معلوماتكم الشخصية من الوصول غير المصرح به أو التغيير أو الإفصاح أو الإتلاف.</p>
+                <p class="mb-6">نتخذ إجراءات أمنية مناسبة لحماية معلوماتكم الشخصية من الوصول غير المصرح به أو التغيير أو
+                    الإفصاح أو الإتلاف.</p>
 
                 <h2 class="text-2xl font-semibold mb-4">4. ملفات تعريف الارتباط</h2>
-                <p class="mb-6">قد نستخدم ملفات تعريف الارتباط لتحسين تجربة التصفح الخاصة بك على موقعنا. يمكنك اختيار رفض ملفات تعريف الارتباط إذا كنت تفضل ذلك.</p>
+                <p class="mb-6">قد نستخدم ملفات تعريف الارتباط لتحسين تجربة التصفح الخاصة بك على موقعنا. يمكنك اختيار
+                    رفض ملفات تعريف الارتباط إذا كنت تفضل ذلك.</p>
 
                 <h2 class="text-2xl font-semibold mb-4">5. التغييرات في سياسة الخصوصية</h2>
-                <p class="mb-6">قد نقوم بتحديث سياسة الخصوصية هذه من وقت لآخر. سنخطرك بأي تغييرات عن طريق نشر السياسة الجديدة على هذه الصفحة.</p>
+                <p class="mb-6">قد نقوم بتحديث سياسة الخصوصية هذه من وقت لآخر. سنخطرك بأي تغييرات عن طريق نشر السياسة
+                    الجديدة على هذه الصفحة.</p>
 
                 <h2 class="text-2xl font-semibold mb-4">6. اتصل بنا</h2>
                 <p>إذا كان لديك أي أسئلة حول سياسة الخصوصية هذه، يرجى الاتصال بنا على:</p>
-                <p>البريد الإلكتروني: <a href="mailto:info@ebdaamarble.com" class="text-blue-500 hover:text-blue-600">info@ebdaamarble.com</a></p>
-                <p>الهاتف: <a href="https://wa.me/966561332223" target="_blank" class="text-blue-500 hover:text-blue-600">+966 56 133 2223</a></p>
+                <p>البريد الإلكتروني: <a href="mailto:info@ebdaamarble.com"
+                        class="text-blue-500 hover:text-blue-600">info@ebdaamarble.com</a></p>
+                <p>الهاتف: <a href="https://wa.me/966561332223" target="_blank"
+                        class="text-blue-500 hover:text-blue-600">+966 56 133 2223</a></p>
             </div>
         </div>
     </section>
@@ -61,4 +71,5 @@
         </div>
     </footer>
 </body>
+
 </html>
