--- a/services.html
+++ b/services.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,19 +8,22 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body class="font-arabic">
     <!-- رأس الصفحة -->
     <header class="bg-white shadow-md">
         <nav class="container mx-auto px-6 py-3 flex justify-between items-center">
             <div class="flex items-center">
-                <img src="/path/to/logo.png" alt="شعار مصنع الابداع للرخام" class="h-12 w-auto">
+                <img src="images/logo.png" alt="شعار مصنع الابداع للرخام" class="h-12 w-auto">
             </div>
             <div class="hidden md:flex items-center space-x-4">
-                <a href="index.html" class="text-gray-800 hover:text-gray-600">الرئيسية</a>
-                <a href="about.html" class="text-gray-800 hover:text-gray-600">من نحن</a>
+                <a href="/index.html" class="text-gray-800 hover:text-gray-600 ml-2">الرئيسية</a>
+                <a href="/about.html" class="text-gray-800 hover:text-gray-600">من نحن</a>
                 <a href="#" class="text-gray-800 hover:text-gray-600 font-bold">خدماتنا</a>
-                <a href="#" class="text-gray-800 hover:text-gray-600">مشاريعنا</a>
-                <a href="#" class="text-gray-800 hover:text-gray-600">اتصل بنا</a>
+                <a href="/projects.html" class="text-gray-800 hover:text-gray-600">مشاريعنا</a>
+                <a href="/contact.html" class="text-gray-800 hover:text-gray-600">اتصل بنا</a>
+                <a href="/privacy-policy.html" class="text-gray-800 hover:text-gray-600">سياسة الخصوصية</a>
+                <a href="/updated-offers-page.html" class="text-gray-800 hover:text-gray-600">عروض اليوم الوطني</a>
             </div>
         </nav>
     </header>
@@ -28,12 +32,14 @@
     <section class="py-16 bg-gray-100">
         <div class="container mx-auto px-6">
             <h1 class="text-4xl font-bold mb-8 text-center">خدماتنا</h1>
-            <p class="text-xl mb-12 text-center">نقدم مجموعة واسعة من الخدمات في مجال الرخام والجرانيت لتلبية احتياجات عملائنا المتنوعة</p>
-            
+            <p class="text-xl mb-12 text-center">نقدم مجموعة واسعة من الخدمات في مجال الرخام والجرانيت لتلبية احتياجات
+                عملائنا المتنوعة</p>
+
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <div class="bg-white p-6 rounded-lg shadow-md">
                     <h3 class="text-xl font-semibold mb-4">أعمال الأرضيات</h3>
-                    <p>نقدم خدمات تركيب وتصميم أرضيات الرخام بأعلى جودة، مع مجموعة واسعة من الأنماط والألوان لتناسب كل ذوق.</p>
+                    <p>نقدم خدمات تركيب وتصميم أرضيات الرخام بأعلى جودة، مع مجموعة واسعة من الأنماط والألوان لتناسب كل
+                        ذوق.</p>
                 </div>
                 <div class="bg-white p-6 rounded-lg shadow-md">
                     <h3 class="text-xl font-semibold mb-4">سلالم رخامية</h3>
@@ -85,7 +91,9 @@
         <div class="container mx-auto px-6 text-center">
             <h2 class="text-3xl font-semibold mb-8">هل أنت مستعد لبدء مشروعك؟</h2>
             <p class="text-xl mb-8">نحن هنا لمساعدتك في تحقيق رؤيتك. اتصل بنا اليوم للحصول على استشارة مجانية.</p>
-            <a href="https://wa.me/966561332223" target="_blank" class="bg-blue-500 text-white px-6 py-3 rounded-lg hover:bg-blue-600 transition duration-300">اطلب خدمة</a>
+            <a href="https://wa.me/966561332223" target="_blank"
+                class="bg-blue-500 text-white px-6 py-3 rounded-lg hover:bg-blue-600 transition duration-300">اطلب
+                خدمة</a>
         </div>
     </section>
 
@@ -96,4 +104,5 @@
         </div>
     </footer>
 </body>
+
 </html>
