--- a/index.html
+++ b/index.html
@@ -69,16 +69,16 @@
             <div class="hidden md:flex items-center">
                 <a href="#"
                     class="text-gray-800 hover:text-blue-600 transition duration-300 ml-8 font-bold">الرئيسية</a>
-                <a href="/about.html" class="text-gray-800 hover:text-blue-600 transition duration-300 ml-8">من نحن</a>
-                <a href="/services.html"
+                <a href="about.html" class="text-gray-800 hover:text-blue-600 transition duration-300 ml-8">من نحن</a>
+                <a href="services.html"
                     class="text-gray-800 hover:text-blue-600 transition duration-300 ml-8">خدماتنا</a>
-                <a href="/projects.html"
+                <a href="projects.html"
                     class="text-gray-800 hover:text-blue-600 transition duration-300 ml-8">مشاريعنا</a>
-                <a href="/contact.html" class="text-gray-800 hover:text-blue-600 transition duration-300 ml-8">اتصل
+                <a href="contact.html" class="text-gray-800 hover:text-blue-600 transition duration-300 ml-8">اتصل
                     بنا</a>
-                <a href="/privacy-policy.html"
+                <a href="privacy-policy.html"
                     class="text-gray-800 hover:text-blue-600 transition duration-300 ml-8">سياسة الخصوصية</a>
-                <a href="/updated-offers-page.html"
+                <a href="updated-offers-page.html"
                     class="text-gray-800 hover:text-blue-600 transition duration-300 ml-8">عروض اليوم الوطني السعودي</a>
             </div>
         </nav>
