--- a/updated-offers-page.html
+++ b/updated-offers-page.html
@@ -155,12 +155,12 @@
         <nav class="container main-nav">
             <img src="images/logo.png" alt="شعار مصنع الابداع للرخام" class="logo h-12">
             <div class="nav-links">
-                <a href="/index.html" class="text-gray-800 hover:text-gray-600 ml-2">الرئيسية</a>
-                <a href="/about.html" class="text-gray-800 hover:text-gray-600">من نحن</a>
-                <a href="/services.html" class="text-gray-800 hover:text-gray-600">خدماتنا</a>
-                <a href="/projects.html" class="text-gray-800 hover:text-gray-600">مشاريعنا</a>
-                <a href="/contact.html" class="text-gray-800 hover:text-gray-600">اتصل بنا</a>
-                <a href="/privacy-policy.html" class="text-gray-800 hover:text-gray-600">سياسة الخصوصية</a>
+                <a href="index.html" class="text-gray-800 hover:text-gray-600 ml-2">الرئيسية</a>
+                <a href="about.html" class="text-gray-800 hover:text-gray-600">من نحن</a>
+                <a href="services.html" class="text-gray-800 hover:text-gray-600">خدماتنا</a>
+                <a href="projects.html" class="text-gray-800 hover:text-gray-600">مشاريعنا</a>
+                <a href="contact.html" class="text-gray-800 hover:text-gray-600">اتصل بنا</a>
+                <a href="privacy-policy.html" class="text-gray-800 hover:text-gray-600">سياسة الخصوصية</a>
                 <a href="#" class="text-gray-800 hover:text-gray-600 font-bold">عروض اليوم الوطني</a>
             </div>
         </nav>
