--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -17,13 +17,13 @@
                 <img src="images/logo.png" alt="شعار مصنع الابداع للرخام" class="h-12 w-auto">
             </div>
             <div class="hidden md:flex items-center space-x-4">
-                <a href="/index.html" class="text-gray-800 hover:text-gray-600 ml-2">الرئيسية</a>
-                <a href="/about.html" class="text-gray-800 hover:text-gray-600">من نحن</a>
-                <a href="/services.html" class="text-gray-800 hover:text-gray-600">خدماتنا</a>
-                <a href="/projects.html" class="text-gray-800 hover:text-gray-600">مشاريعنا</a>
-                <a href="/contact.html" class="text-gray-800 hover:text-gray-600">اتصل بنا</a>
+                <a href="index.html" class="text-gray-800 hover:text-gray-600 ml-2">الرئيسية</a>
+                <a href="about.html" class="text-gray-800 hover:text-gray-600">من نحن</a>
+                <a href="services.html" class="text-gray-800 hover:text-gray-600">خدماتنا</a>
+                <a href="projects.html" class="text-gray-800 hover:text-gray-600">مشاريعنا</a>
+                <a href="contact.html" class="text-gray-800 hover:text-gray-600">اتصل بنا</a>
                 <a href="#" class="text-gray-800 hover:text-gray-600 font-bold">سياسة الخصوصية</a>
-                <a href="/updated-offers-page.html" class="text-gray-800 hover:text-gray-600">عروض اليوم الوطني</a>
+                <a href="updated-offers-page.html" class="text-gray-800 hover:text-gray-600">عروض اليوم الوطني</a>
             </div>
         </nav>
     </header>
