--- a/about.html
+++ b/about.html
@@ -5,25 +5,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>من نحن - مصنع الابداع للرخام</title>
-    <link rel="stylesheet" href="style.css">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 <body class="font-arabic">
     <!-- رأس الصفحة -->
-    <header class="bg-white shadow-md">
-        <nav class="container mx-auto px-6 py-3 flex justify-between items-center">
-            <div class="flex items-center">
-                <img src="images/logo.png" alt="شعار مصنع الابداع للرخام" class="h-12 w-auto">
-            </div>
-            <div class="hidden md:flex items-center space-x-4">
-                <a href="/index.html" class="text-gray-800 hover:text-gray-600 ml-2">الرئيسية</a>
-                <a href="#" class="text-gray-800 hover:text-gray-600 font-bold">من نحن</a>
-                <a href="/services.html" class="text-gray-800 hover:text-gray-600">خدماتنا</a>
-                <a href="/projects.html" class="text-gray-800 hover:text-gray-600">مشاريعنا</a>
-                <a href="/contact.html" class="text-gray-800 hover:text-gray-600">اتصل بنا</a>
-                <a href="/privacy-policy.html" class="text-gray-800 hover:text-gray-600">سياسة الخصوصية</a>
-                <a href="/updated-offers-page.html" class="text-gray-800 hover:text-gray-600">عروض اليوم الوطني</a>
+    <header class="main-header bg-white container">
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03"
+                aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <a class="navbar-brand" href="#">
+                <img src="images/logo.png" alt="شعار مصنع الابداع للرخام" class="logo h-12">
+            </a>
+
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+                <ul class="navbar-nav mr-auto mt-2 mt-lg-0 text-right">
+                    <li class="nav-item">
+                        <a href="index.html" class="nav-link text-gray-800 hover:text-gray-600 ml-2">الرئيسية</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a href="#" class="nav-link text-gray-800 hover:text-gray-600 font-bold">من
+                            نحن</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="services.html" class="nav-link text-gray-800 hover:text-gray-600">خدماتنا</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="projects.html" class="nav-link text-gray-800 hover:text-gray-600">مشاريعنا</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="contact.html" class="nav-link text-gray-800 hover:text-gray-600">اتصل
+                            بنا</a>
+                    </li>
+                    <li class="nav-item"><a href="privacy-policy.html"
+                            class="nav-link text-gray-800 hover:text-gray-600">سياسة الخصوصية</a>
+                    </li>
+                    <li class="nav-item"><a href="updated-offers-page.html"
+                            class="nav-link text-gray-800 hover:text-gray-600">عروض
+                            اليوم الوطني</a>
+                    </li>
+                </ul>
             </div>
         </nav>
     </header>
@@ -96,6 +122,16 @@
             <p>&copy; 2024 مصنع الابداع للرخام. جميع الحقوق محفوظة.</p>
         </div>
     </footer>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
