--- a/index.html
+++ b/index.html
@@ -57,11 +57,57 @@
             max-width: 800px;
         }
     </style>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
 </head>
 
-<body class="bg-gray-100">
+<body>
+    <header class="main-header bg-white container">
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03"
+                aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <a class="navbar-brand" href="#">
+                <img src="images/logo.png" alt="شعار مصنع الابداع للرخام" class="logo h-12">
+            </a>
+
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+                <ul class="navbar-nav mr-auto mt-2 mt-lg-0 text-right">
+                    <li class="nav-item active">
+                        <a href="index.html"
+                            class="nav-link text-gray-800 hover:text-gray-600 ml-2 font-bold">الرئيسية</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="about.html" class="nav-link text-gray-800 hover:text-gray-600">من
+                            نحن</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="services.html" class="nav-link text-gray-800 hover:text-gray-600">خدماتنا</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="projects.html" class="nav-link text-gray-800 hover:text-gray-600">مشاريعنا</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="contact.html" class="nav-link text-gray-800 hover:text-gray-600">اتصل
+                            بنا</a>
+                    </li>
+                    <li class="nav-item"><a href="privacy-policy.html"
+                            class="nav-link text-gray-800 hover:text-gray-600">سياسة الخصوصية</a>
+                    </li>
+                    <li class="nav-item"><a href="updated-offers-page.html"
+                            class="nav-link text-gray-800 hover:text-gray-600">عروض
+                            اليوم الوطني</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+
     <!-- رأس الصفحة -->
-    <header class="bg-white shadow-md sticky top-0 z-50">
+    <!-- <header class="bg-white shadow-md sticky top-0 z-50">
         <nav class="container mx-auto px-6 py-3 flex justify-between items-center">
             <div class="flex items-center">
                 <img src="images/logo.png" alt="شعار مصنع الابداع للرخام" class="h-12 w-auto">
@@ -82,135 +128,139 @@
                     class="text-gray-800 hover:text-blue-600 transition duration-300 ml-8">عروض اليوم الوطني السعودي</a>
             </div>
         </nav>
-    </header>
+    </header> -->
 
-    <!-- Slider Banner -->
-    <div class="slider">
-        <div class="slide active" style="background-image: url('/images/slide1.jpg');">
-            <div class="slide-content">
-                <h2 class="text-5xl font-bold mb-4 text-white shadow-text">أفضل أنواع الرخام</h2>
-                <p class="text-xl mb-6 text-gray-200">جودة عالية وتصاميم فريدة تلبي جميع الأذواق</p>
-                <a href="#"
-                    class="bg-blue-600 text-white px-8 py-3 rounded-lg hover:bg-blue-700 transition duration-300 text-lg font-semibold">اكتشف
-                    المزيد</a>
+    <div class="bg-gray-100">
+        <!-- Slider Banner -->
+        <div class="slider">
+            <div class="slide active" style="background-image: url('images/slide-1.jpeg');">
+                <div class="slide-content">
+                    <h2 class="text-5xl font-bold mb-4 text-white shadow-text">أفضل أنواع الرخام</h2>
+                    <p class="text-xl mb-6 text-gray-200">جودة عالية وتصاميم فريدة تلبي جميع الأذواق</p>
+                    <a href="#"
+                        class="bg-blue-600 text-white px-8 py-3 rounded-lg hover:bg-blue-700 transition duration-300 text-lg font-semibold">اكتشف
+                        المزيد</a>
+                </div>
+            </div>
+            <div class="slide" style="background-image: url('images/slide-2.jpeg');">
+                <div class="slide-content">
+                    <h2 class="text-5xl font-bold mb-4 text-white shadow-text">خبرة 30 عامًا</h2>
+                    <p class="text-xl mb-6 text-gray-200">في مجال الرخام والجرانيت، نضع خبرتنا بين يديك</p>
+                    <a href="#"
+                        class="bg-green-600 text-white px-8 py-3 rounded-lg hover:bg-green-700 transition duration-300 text-lg font-semibold">تعرف
+                        علينا</a>
+                </div>
+            </div>
+            <div class="slide" style="background-image: url('images/slide-3.jpeg');">
+                <div class="slide-content">
+                    <h2 class="text-5xl font-bold mb-4 text-white shadow-text">مشاريع مميزة</h2>
+                    <p class="text-xl mb-6 text-gray-200">نفخر بتنفيذها بأعلى معايير الجودة والإتقان</p>
+                    <a href="#"
+                        class="bg-red-600 text-white px-8 py-3 rounded-lg hover:bg-red-700 transition duration-300 text-lg font-semibold">شاهد
+                        أعمالنا</a>
+                </div>
             </div>
         </div>
-        <div class="slide" style="background-image: url('/images/slide2.jpg');">
-            <div class="slide-content">
-                <h2 class="text-5xl font-bold mb-4 text-white shadow-text">خبرة 30 عامًا</h2>
-                <p class="text-xl mb-6 text-gray-200">في مجال الرخام والجرانيت، نضع خبرتنا بين يديك</p>
-                <a href="#"
-                    class="bg-green-600 text-white px-8 py-3 rounded-lg hover:bg-green-700 transition duration-300 text-lg font-semibold">تعرف
-                    علينا</a>
+
+        <!-- نبذة عنا -->
+        <section class="py-16 bg-white">
+            <div class="container mx-auto px-6">
+                <h2 class="text-3xl font-bold text-center mb-8 text-gray-800">من نحن</h2>
+                <p class="text-lg text-center mb-8 text-gray-600 max-w-3xl mx-auto">مصنع الابداع للرخام هو شركة رائدة في
+                    مجال الرخام والجرانيت مع خبرة تمتد لأكثر من 30 عامًا. نفخر بتقديم منتجات عالية الجودة وخدمات متميزة
+                    لعملائنا.</p>
+                <div class="flex justify-center">
+                    <a href="#" class="text-blue-600 hover:text-blue-800 transition duration-300 font-semibold">اقرأ
+                        المزيد
+                        عنا</a>
+                </div>
             </div>
-        </div>
-        <div class="slide" style="background-image: url('/images/slide3.jpg');">
-            <div class="slide-content">
-                <h2 class="text-5xl font-bold mb-4 text-white shadow-text">مشاريع مميزة</h2>
-                <p class="text-xl mb-6 text-gray-200">نفخر بتنفيذها بأعلى معايير الجودة والإتقان</p>
-                <a href="#"
-                    class="bg-red-600 text-white px-8 py-3 rounded-lg hover:bg-red-700 transition duration-300 text-lg font-semibold">شاهد
-                    أعمالنا</a>
+        </section>
+
+        <!-- خدماتنا -->
+        <section class="py-16 bg-gray-100">
+            <div class="container mx-auto px-6">
+                <h2 class="text-3xl font-bold text-center mb-12 text-gray-800">خدماتنا</h2>
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+                    <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition duration-300">
+                        <h3 class="text-xl font-semibold mb-4 text-gray-800">أعمال الأرضيات</h3>
+                        <p class="text-gray-600">نقدم خدمات تركيب وتصميم أرضيات الرخام بأعلى جودة، مع مجموعة واسعة من
+                            الخيارات.</p>
+                    </div>
+                    <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition duration-300">
+                        <h3 class="text-xl font-semibold mb-4 text-gray-800">أعمال الجرانيت</h3>
+                        <p class="text-gray-600">خبراء في تركيب وتشكيل الجرانيت لمختلف الاستخدامات، بدقة وإتقان لا مثيل
+                            لهما.</p>
+                    </div>
+                    <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition duration-300">
+                        <h3 class="text-xl font-semibold mb-4 text-gray-800">الديكورات التشكيلية</h3>
+                        <p class="text-gray-600">نبدع في تصميم وتنفيذ الديكورات الرخامية الفريدة، لإضافة لمسة فنية
+                            لمساحاتك.
+                        </p>
+                    </div>
+                </div>
             </div>
-        </div>
+        </section>
+
+        <!-- مشاريعنا -->
+        <section class="py-16 bg-white">
+            <div class="container mx-auto px-6">
+                <h2 class="text-3xl font-bold text-center mb-12 text-gray-800">بعض من مشاريعنا</h2>
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+                    <img src="/api/placeholder/400/300" alt="مشروع 1"
+                        class="rounded-lg shadow-md hover:shadow-lg transition duration-300">
+                    <img src="/api/placeholder/400/300" alt="مشروع 2"
+                        class="rounded-lg shadow-md hover:shadow-lg transition duration-300">
+                    <img src="/api/placeholder/400/300" alt="مشروع 3"
+                        class="rounded-lg shadow-md hover:shadow-lg transition duration-300">
+                </div>
+                <div class="text-center mt-8">
+                    <a href="#"
+                        class="bg-blue-600 text-white px-6 py-3 rounded-lg hover:bg-blue-700 transition duration-300 inline-block">عرض
+                        جميع المشاريع</a>
+                </div>
+            </div>
+        </section>
+
+        <!-- اتصل بنا -->
+        <section class="py-16 bg-gray-100">
+            <div class="container mx-auto px-6">
+                <h2 class="text-3xl font-bold text-center mb-12 text-gray-800">اتصل بنا</h2>
+                <div class="flex flex-col md:flex-row justify-between">
+                    <div class="md:w-1/2 mb-8 md:mb-0">
+                        <h3 class="text-xl font-semibold mb-4 text-gray-800">معلومات الاتصال</h3>
+                        <p class="mb-2">الهاتف: <a href="https://wa.me/966561332223" target="_blank"
+                                class="text-blue-600 hover:text-blue-800 transition duration-300">+966 56 133 2223</a>
+                        </p>
+                        <p class="mb-2">العنوان: المملكة العربية السعودية - الرياض - طريق الخرج</p>
+                        <p>البريد الإلكتروني: <a href="mailto:info@ebdaamarble.com"
+                                class="text-blue-600 hover:text-blue-800 transition duration-300">info@ebdaamarble.com</a>
+                        </p>
+                    </div>
+                    <div class="md:w-1/2">
+                        <form>
+                            <input type="text" placeholder="الاسم"
+                                class="w-full mb-4 p-2 rounded-lg border border-gray-300 focus:border-blue-500 focus:outline-none">
+                            <input type="email" placeholder="البريد الإلكتروني"
+                                class="w-full mb-4 p-2 rounded-lg border border-gray-300 focus:border-blue-500 focus:outline-none">
+                            <textarea placeholder="رسالتك"
+                                class="w-full mb-4 p-2 rounded-lg border border-gray-300 focus:border-blue-500 focus:outline-none"
+                                rows="4"></textarea>
+                            <button type="submit"
+                                class="bg-blue-600 text-white px-6 py-3 rounded-lg hover:bg-blue-700 transition duration-300">إرسال</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- تذييل الصفحة -->
+        <footer class="bg-gray-800 text-white py-8">
+            <div class="container mx-auto px-6 text-center">
+                <p>&copy; 2024 مصنع الابداع للرخام. جميع الحقوق محفوظة.</p>
+            </div>
+        </footer>
     </div>
-
-    <!-- نبذة عنا -->
-    <section class="py-16 bg-white">
-        <div class="container mx-auto px-6">
-            <h2 class="text-3xl font-bold text-center mb-8 text-gray-800">من نحن</h2>
-            <p class="text-lg text-center mb-8 text-gray-600 max-w-3xl mx-auto">مصنع الابداع للرخام هو شركة رائدة في
-                مجال الرخام والجرانيت مع خبرة تمتد لأكثر من 30 عامًا. نفخر بتقديم منتجات عالية الجودة وخدمات متميزة
-                لعملائنا.</p>
-            <div class="flex justify-center">
-                <a href="#" class="text-blue-600 hover:text-blue-800 transition duration-300 font-semibold">اقرأ المزيد
-                    عنا</a>
-            </div>
-        </div>
-    </section>
-
-    <!-- خدماتنا -->
-    <section class="py-16 bg-gray-100">
-        <div class="container mx-auto px-6">
-            <h2 class="text-3xl font-bold text-center mb-12 text-gray-800">خدماتنا</h2>
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-                <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition duration-300">
-                    <h3 class="text-xl font-semibold mb-4 text-gray-800">أعمال الأرضيات</h3>
-                    <p class="text-gray-600">نقدم خدمات تركيب وتصميم أرضيات الرخام بأعلى جودة، مع مجموعة واسعة من
-                        الخيارات.</p>
-                </div>
-                <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition duration-300">
-                    <h3 class="text-xl font-semibold mb-4 text-gray-800">أعمال الجرانيت</h3>
-                    <p class="text-gray-600">خبراء في تركيب وتشكيل الجرانيت لمختلف الاستخدامات، بدقة وإتقان لا مثيل
-                        لهما.</p>
-                </div>
-                <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition duration-300">
-                    <h3 class="text-xl font-semibold mb-4 text-gray-800">الديكورات التشكيلية</h3>
-                    <p class="text-gray-600">نبدع في تصميم وتنفيذ الديكورات الرخامية الفريدة، لإضافة لمسة فنية لمساحاتك.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- مشاريعنا -->
-    <section class="py-16 bg-white">
-        <div class="container mx-auto px-6">
-            <h2 class="text-3xl font-bold text-center mb-12 text-gray-800">بعض من مشاريعنا</h2>
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-                <img src="/api/placeholder/400/300" alt="مشروع 1"
-                    class="rounded-lg shadow-md hover:shadow-lg transition duration-300">
-                <img src="/api/placeholder/400/300" alt="مشروع 2"
-                    class="rounded-lg shadow-md hover:shadow-lg transition duration-300">
-                <img src="/api/placeholder/400/300" alt="مشروع 3"
-                    class="rounded-lg shadow-md hover:shadow-lg transition duration-300">
-            </div>
-            <div class="text-center mt-8">
-                <a href="#"
-                    class="bg-blue-600 text-white px-6 py-3 rounded-lg hover:bg-blue-700 transition duration-300 inline-block">عرض
-                    جميع المشاريع</a>
-            </div>
-        </div>
-    </section>
-
-    <!-- اتصل بنا -->
-    <section class="py-16 bg-gray-100">
-        <div class="container mx-auto px-6">
-            <h2 class="text-3xl font-bold text-center mb-12 text-gray-800">اتصل بنا</h2>
-            <div class="flex flex-col md:flex-row justify-between">
-                <div class="md:w-1/2 mb-8 md:mb-0">
-                    <h3 class="text-xl font-semibold mb-4 text-gray-800">معلومات الاتصال</h3>
-                    <p class="mb-2">الهاتف: <a href="https://wa.me/966561332223" target="_blank"
-                            class="text-blue-600 hover:text-blue-800 transition duration-300">+966 56 133 2223</a></p>
-                    <p class="mb-2">العنوان: المملكة العربية السعودية - الرياض - طريق الخرج</p>
-                    <p>البريد الإلكتروني: <a href="mailto:info@ebdaamarble.com"
-                            class="text-blue-600 hover:text-blue-800 transition duration-300">info@ebdaamarble.com</a>
-                    </p>
-                </div>
-                <div class="md:w-1/2">
-                    <form>
-                        <input type="text" placeholder="الاسم"
-                            class="w-full mb-4 p-2 rounded-lg border border-gray-300 focus:border-blue-500 focus:outline-none">
-                        <input type="email" placeholder="البريد الإلكتروني"
-                            class="w-full mb-4 p-2 rounded-lg border border-gray-300 focus:border-blue-500 focus:outline-none">
-                        <textarea placeholder="رسالتك"
-                            class="w-full mb-4 p-2 rounded-lg border border-gray-300 focus:border-blue-500 focus:outline-none"
-                            rows="4"></textarea>
-                        <button type="submit"
-                            class="bg-blue-600 text-white px-6 py-3 rounded-lg hover:bg-blue-700 transition duration-300">إرسال</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- تذييل الصفحة -->
-    <footer class="bg-gray-800 text-white py-8">
-        <div class="container mx-auto px-6 text-center">
-            <p>&copy; 2024 مصنع الابداع للرخام. جميع الحقوق محفوظة.</p>
-        </div>
-    </footer>
-
     <script>
         const slides = document.querySelectorAll('.slide');
         let currentSlide = 0;
@@ -227,6 +277,15 @@
 
         setInterval(nextSlide, 3000); // تغيير الشريحة كل 3 ثوانٍ
     </script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
