--- a/projects.html
+++ b/projects.html
@@ -7,11 +7,54 @@
     <title>مشاريعنا - مصنع الابداع للرخام</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 <body class="font-arabic">
+    <header class="main-header bg-white container">
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03"
+                aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <a class="navbar-brand" href="#">
+                <img src="images/logo.png" alt="شعار مصنع الابداع للرخام" class="logo h-12">
+            </a>
+
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+                <ul class="navbar-nav mr-auto mt-2 mt-lg-0 text-right">
+                    <li class="nav-item">
+                        <a href="index.html" class="nav-link text-gray-800 hover:text-gray-600 ml-2">الرئيسية</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="about.html" class="nav-link text-gray-800 hover:text-gray-600">من
+                            نحن</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="services.html" class="nav-link text-gray-800 hover:text-gray-600">خدماتنا</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a href="projects.html"
+                            class="nav-link text-gray-800 hover:text-gray-600 font-bold">مشاريعنا</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="contact.html" class="nav-link text-gray-800 hover:text-gray-600">اتصل
+                            بنا</a>
+                    </li>
+                    <li class="nav-item"><a href="privacy-policy.html"
+                            class="nav-link text-gray-800 hover:text-gray-600">سياسة الخصوصية</a>
+                    </li>
+                    <li class="nav-item"><a href="updated-offers-page.html"
+                            class="nav-link text-gray-800 hover:text-gray-600">عروض
+                            اليوم الوطني</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
     <!-- رأس الصفحة -->
-    <header class="bg-white shadow-md">
+    <!-- <header class="bg-white shadow-md">
         <nav class="container mx-auto px-6 py-3 flex justify-between items-center">
             <div class="flex items-center">
                 <img src="images/logo.png" alt="شعار مصنع الابداع للرخام" class="h-12 w-auto">
@@ -26,7 +69,7 @@
                 <a href="updated-offers-page.html" class="text-gray-800 hover:text-gray-600">عروض اليوم الوطني</a>
             </div>
         </nav>
-    </header>
+    </header> -->
 
     <!-- قسم المشاريع الرئيسي -->
     <section class="py-16 bg-gray-100">
@@ -111,6 +154,15 @@
             <p>&copy; 2024 مصنع الابداع للرخام. جميع الحقوق محفوظة.</p>
         </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
