--- a/updated-offers-page.html
+++ b/updated-offers-page.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>عروض اليوم الوطني - مصنع الابداع للرخام</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <style>
         :root {
@@ -152,18 +154,35 @@
 
 <body>
     <header class="main-header">
-        <nav class="container main-nav">
-            <img src="images/logo.png" alt="شعار مصنع الابداع للرخام" class="logo h-12">
-            <div class="nav-links">
-                <a href="index.html" class="text-gray-800 hover:text-gray-600 ml-2">الرئيسية</a>
-                <a href="about.html" class="text-gray-800 hover:text-gray-600">من نحن</a>
-                <a href="services.html" class="text-gray-800 hover:text-gray-600">خدماتنا</a>
-                <a href="projects.html" class="text-gray-800 hover:text-gray-600">مشاريعنا</a>
-                <a href="contact.html" class="text-gray-800 hover:text-gray-600">اتصل بنا</a>
-                <a href="privacy-policy.html" class="text-gray-800 hover:text-gray-600">سياسة الخصوصية</a>
-                <a href="#" class="text-gray-800 hover:text-gray-600 font-bold">عروض اليوم الوطني</a>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03"
+                aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <a class="navbar-brand" href="#">
+                <img src="images/logo.png" alt="شعار مصنع الابداع للرخام" class="logo h-12">
+            </a>
+
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+                <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                    <li class="nav-item"><a href="index.html"
+                            class="nav-link text-gray-800 hover:text-gray-600 ml-2">الرئيسية</a></li>
+                    <li class="nav-item"><a href="about.html" class="nav-link text-gray-800 hover:text-gray-600">من
+                            نحن</a></li>
+                    <li class="nav-item"><a href="services.html"
+                            class="nav-link text-gray-800 hover:text-gray-600">خدماتنا</a></li>
+                    <li class="nav-item"><a href="projects.html"
+                            class="nav-link text-gray-800 hover:text-gray-600">مشاريعنا</a></li>
+                    <li class="nav-item"><a href="contact.html" class="nav-link text-gray-800 hover:text-gray-600">اتصل
+                            بنا</a></li>
+                    <li class="nav-item"><a href="privacy-policy.html"
+                            class="nav-link text-gray-800 hover:text-gray-600">سياسة الخصوصية</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link text-gray-800 hover:text-gray-600 font-bold">عروض
+                            اليوم الوطني</a></li>
+                </ul>
             </div>
         </nav>
+
     </header>
 
     <header class="header">
@@ -217,6 +236,15 @@
             <p>&copy; 2024 مصنع الابداع للرخام. جميع الحقوق محفوظة.</p>
         </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
